[package]
name = "git-annex-remote-tape"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.97"
bitflags = "2.9.0"
clap = { version = "4.5.31", features = ["derive"] }
endian_trait = "0.6.0"
libc = "0.2.171"
linux-raw-sys = { version = "0.9.3", features = [ "ioctl"] }
nix = { version = "0.29.0", features = ["ioctl"] }
serde = "1.0.219"
