[package]
name = "git-annex-remote-tape"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.97"
bitflags = "2.9.0"
clap = { version = "4.5.31", features = ["derive"] }
endian_trait = "0.6.0"
flagset = "0.4.6"
libc = "0.2.171"
linux-raw-sys = { version = "0.9.3", features = ["ioctl"] }
nix = { version = "0.29.0", features = ["ioctl", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
